# Mean-Field-Approximate-Optimization-Algorithm

./: README.md  pyproject.toml
data/SK_model/: README.md  SK_model_p_1000_N_100_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_105_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_10_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_10_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_110_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_115_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_11_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_120_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_12_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_13_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_14_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_150_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_15_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_15_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_16_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_17_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_180_num_inst_10000_seed_137_moments.h5  SK_model_p_1000_N_18_num_inst_10000_seed_137_hist_stats.h5  SK_model_p_1000_N_19_num_inst_10000_seed_137_hist_stats.h5  (+24 more)
notebooks/: QAOA_data_number_partitioning.ipynb  SK_model_exact.ipynb  fluctuations.ipynb  introduction.ipynb  paper.mplstyle  plots_SK_model.ipynb  plots_number-partitioning.ipynb  review.ipynb  test.ipynb
src/: __init__.py  fluctuations.py  meanfieldaoa.py  mf_AOA.py
test/: test_fluctuations.py  test_mf_AOA.py
(+4230 files in other folders)
